# bdc-news-monitor

./: .gitignore  README.md  SPEC.md  TODO_CONFIRM.md  pyproject.toml
.github/workflows/: daily.yml
config/: alert_rules.yaml  edgar_ciks.yaml  event_taxonomy.yaml  keywords.yaml  sentiment_overrides_bdc.yaml  sources.yaml  tickers.yaml  weights.yaml
docs/: BDC_Monitor_Improvement_Spec.md  METHODOLOGY.md  index.html
docs/assets/: app.js  style.css
docs/data/: articles.json  articles_deduped.csv  by_entity.json  daily_index.json  meta.json  monthly_index.json  prices.json  quarterly_metrics.json
lexicons/: README.md  domain_override.csv  ja_financial_polarity.csv  lm_financial_en.csv
scripts/: create_issues.py  rescore_and_dedup.py
src/bdc_news/: __init__.py  cli.py  paths.py
src/bdc_news/alerts/: evaluator.py  notifier.py
src/bdc_news/collectors/: __init__.py  base.py  gdelt.py  google_news.py  rss.py  sec_edgar.py
src/bdc_news/export/: __init__.py  to_static_json.py
src/bdc_news/extractors/: __init__.py  edgar_client.py  edgar_metrics.py  event_tagger.py
src/bdc_news/pipeline/: __init__.py  aggregator.py  bdc_overrides.py  classifier.py  dedup.py  normalizer.py  prices.py  sentiment.py
src/bdc_news/storage/: __init__.py  models.py  repo.py
tests/: test_alerts.py  test_classifier.py  test_dedup.py  test_edgar_metrics.py  test_event_tagger.py  test_sentiment.py  test_sentiment_overrides.py
tests/fixtures/edgar/: companyfacts_CIK0001287750.json
