[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdc-news"
version = "0.1.0"
description = "Private Credit / BDC news flow monitor and sentiment dashboard (offline, no external API)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "bdc-news-monitor" }]
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "PyYAML>=6.0",
    "python-dateutil>=2.9",
    "langdetect>=1.0.9",
    "simhash>=2.1",
    "sqlalchemy>=2.0",
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "typer>=0.12",
    "rich>=13.7",
    "oseti>=0.4",
    "fugashi[unidic-lite]>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
bdc-news = "bdc_news.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bdc_news" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
